fixed wrapping contact us button

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -12,7 +12,7 @@
 }
 
 .right{
-    width: 50vw;
+    width: 80vw;
     display: flex;
     align-items: center;
     justify-content: flex-end;
